--- a/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch0.tex
+++ b/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch0.tex
@@ -702,7 +702,7 @@ def h (a b c : ℝ) : a ^ (2:ℕ) + b ^ (2:ℕ) + c ^ (2:ℕ) ≥ a * b + b * c 
     have d186 : ((0:ℕ) : ℝ) + ((-1:ℤ) : ℝ) * (b ^ (1:ℕ) * a ^ (1:ℕ)) + ((-1:ℤ) : ℝ) * (c ^ (1:ℕ) * a ^ (1:ℕ)) + ((1:ℕ) : ℝ) * b ^ (2:ℕ) + ((1:ℕ) : ℝ) * c ^ (2:ℕ) + ((1:ℕ) : ℝ) * a ^ (2:ℕ) + ((-1:ℤ) : ℝ) * (c ^ (1:ℕ) * b ^ (1:ℕ)) = ((0:ℕ) : ℝ) + ((-1:ℤ) : ℝ) * (b ^ (1:ℕ) * a ^ (1:ℕ)) + ((-1:ℤ) : ℝ) * (c ^ (1:ℕ) * a ^ (1:ℕ)) + ((1:ℕ) : ℝ) * b ^ (2:ℕ) + ((1:ℕ) : ℝ) * c ^ (2:ℕ) + ((1:ℕ) : ℝ) * a ^ (2:ℕ) + ((-1:ℤ) : ℝ) * (c ^ (1:ℕ) * b ^ (1:ℕ)) := by term_derivation_reflection
     have d187 : (((0:ℕ) : ℝ) + ((-2:ℤ) : ℝ) * (b ^ (1:ℕ) * a ^ (1:ℕ)) + ((-2:ℤ) : ℝ) * (c ^ (1:ℕ) * a ^ (1:ℕ)) + ((2:ℕ) : ℝ) * b ^ (2:ℕ) + ((2:ℕ) : ℝ) * c ^ (2:ℕ) + ((2:ℕ) : ℝ) * a ^ (2:ℕ) + ((-2:ℤ) : ℝ) * (c ^ (1:ℕ) * b ^ (1:ℕ))) * ((1:ℚ)/2 : ℝ) = ((0:ℕ) : ℝ) + ((-1:ℤ) : ℝ) * (b ^ (1:ℕ) * a ^ (1:ℕ)) + ((-1:ℤ) : ℝ) * (c ^ (1:ℕ) * a ^ (1:ℕ)) + ((1:ℕ) : ℝ) * b ^ (2:ℕ) + ((1:ℕ) : ℝ) * c ^ (2:ℕ) + ((1:ℕ) : ℝ) * a ^ (2:ℕ) + ((-1:ℤ) : ℝ) * (c ^ (1:ℕ) * b ^ (1:ℕ)) := by term_derivation_literal_mul_sum
     have d188 : (((0:ℕ) : ℝ) + ((-2:ℤ) : ℝ) * (b ^ (1:ℕ) * a ^ (1:ℕ)) + ((-2:ℤ) : ℝ) * (c ^ (1:ℕ) * a ^ (1:ℕ)) + ((2:ℕ) : ℝ) * b ^ (2:ℕ) + ((2:ℕ) : ℝ) * c ^ (2:ℕ) + ((2:ℕ) : ℝ) * a ^ (2:ℕ) + ((-2:ℤ) : ℝ) * (c ^ (1:ℕ) * b ^ (1:ℕ))) / ((2:ℕ) : ℝ) = ((0:ℕ) : ℝ) + ((-1:ℤ) : ℝ) * (b ^ (1:ℕ) * a ^ (1:ℕ)) + ((-1:ℤ) : ℝ) * (c ^ (1:ℕ) * a ^ (1:ℕ)) + ((1:ℕ) : ℝ) * b ^ (2:ℕ) + ((1:ℕ) : ℝ) * c ^ (2:ℕ) + ((1:ℕ) : ℝ) * a ^ (2:ℕ) + ((-1:ℤ) : ℝ) * (c ^ (1:ℕ) * b ^ (1:ℕ)) := by term_derivation_div_literal
-    have d189 : (((2:ℕ) : ℝ) * (a ^ (2:ℕ) + b ^ (2:ℕ) + c ^ (2:ℕ) - a * b - b * c - c * a) - ((0:ℕ) : ℝ)) / ((2:ℕ) : ℝ) = ((0:ℕ) : ℝ) + ((-1:ℤ) : ℝ) * (b ^ (1:ℕ) * a ^ (1:ℕ)) + ((-1:ℤ) : ℝ) * (c ^ (1:ℕ) * a ^ (1:ℕ)) + ((1:ℕ) : ℝ) * b ^ (2:ℕ) + ((1:ℕ) : ℝ) * c ^ (2:ℕ) + ((1:ℕ) : ℝ) * a ^ (2:ℕ) + ((-1:ℤ) : ℝ) * (c ^ (1:ℕ) * b ^ (1:ℕ)) := by term_derivation_div_eq
+    have d189 : (((2:ℕ) : ℝ) * (a ^ (2:ℕ) + b ^ (2:ℕ) + c ^ (2:ℕ) - a * b - b * c - c * a) - ((0:ℕ) : ℝ)) / ((2:ℕ) : ℝ) = ((0:ℕ) : ℝ) + ((-1:ℤ) : ℝ) * (b ^ (1:ℕ) * a ^ (1:ℕ)) + ((-1:ℤ) : ℝ) * (c ^ (1:ℕ) * a ^ (1:ℕ)) + ((1:ℕ) : ℝ) * b ^ (2:ℕ) + ((1:ℕ) : ℝ) * c ^ (2:ℕ) + ((1:ℕ) : ℝ) * a ^ (2:ℕ) + ((-1:ℤ) : ℝ) * (c ^ (1:ℕ) * b ^ (1:ℕ)) := by term_derivation_div_eq d130 d131 comm_field_div_identity_coercion comm_field_div_nat_to_real_coercion d188
     have d190 : (-((0:ℕ) : ℤ) : ℤ) = (0:ℕ) := by term_derivation_neg_literal
     have d191 : ((0:ℕ) : ℝ) + ((-1:ℤ) : ℝ) * (b ^ (1:ℕ) * a ^ (1:ℕ)) + ((-1:ℤ) : ℝ) * (c ^ (1:ℕ) * a ^ (1:ℕ)) + ((1:ℕ) : ℝ) * b ^ (2:ℕ) + ((1:ℕ) : ℝ) * c ^ (2:ℕ) + ((1:ℕ) : ℝ) * a ^ (2:ℕ) + ((-1:ℤ) : ℝ) * (c ^ (1:ℕ) * b ^ (1:ℕ)) + ((0:ℕ) : ℝ) = ((0:ℕ) : ℝ) + ((-1:ℤ) : ℝ) * (b ^ (1:ℕ) * a ^ (1:ℕ)) + ((-1:ℤ) : ℝ) * (c ^ (1:ℕ) * a ^ (1:ℕ)) + ((1:ℕ) : ℝ) * b ^ (2:ℕ) + ((1:ℕ) : ℝ) * c ^ (2:ℕ) + ((1:ℕ) : ℝ) * a ^ (2:ℕ) + ((-1:ℤ) : ℝ) * (c ^ (1:ℕ) * b ^ (1:ℕ)) := by term_derivation_nf_add_zero
     have d192 : (((2:ℕ) : ℝ) * (a ^ (2:ℕ) + b ^ (2:ℕ) + c ^ (2:ℕ) - a * b - b * c - c * a) - ((0:ℕ) : ℝ)) / ((2:ℕ) : ℝ) + ((-((0:ℕ) : ℤ) : ℤ) : ℝ) = ((0:ℕ) : ℝ) + ((-1:ℤ) : ℝ) * (b ^ (1:ℕ) * a ^ (1:ℕ)) + ((-1:ℤ) : ℝ) * (c ^ (1:ℕ) * a ^ (1:ℕ)) + ((1:ℕ) : ℝ) * b ^ (2:ℕ) + ((1:ℕ) : ℝ) * c ^ (2:ℕ) + ((1:ℕ) : ℝ) * a ^ (2:ℕ) + ((-1:ℤ) : ℝ) * (c ^ (1:ℕ) * b ^ (1:ℕ)) := by term_derivation_add_eq d189 d190 eq_identity_coercion eq_int_to_real_coercion d191
@@ -783,7 +783,7 @@ def h (a b c : ℝ) : a ^ (2:ℕ) + b ^ (2:ℕ) + c ^ (2:ℕ) ≥ a * b + b * c 
     have d267 : (1:ℕ) = (1:ℕ) := by term_derivation_reflection
     have d268 : (((0:ℕ) : ℝ) + ((-1:ℤ) : ℝ) * (b ^ (1:ℕ) * a ^ (1:ℕ)) + ((-1:ℤ) : ℝ) * (c ^ (1:ℕ) * a ^ (1:ℕ)) + ((1:ℕ) : ℝ) * b ^ (2:ℕ) + ((1:ℕ) : ℝ) * c ^ (2:ℕ) + ((1:ℕ) : ℝ) * a ^ (2:ℕ) + ((-1:ℤ) : ℝ) * (c ^ (1:ℕ) * b ^ (1:ℕ))) * ((1:ℕ) : ℝ) = ((0:ℕ) : ℝ) + ((-1:ℤ) : ℝ) * (b ^ (1:ℕ) * a ^ (1:ℕ)) + ((-1:ℤ) : ℝ) * (c ^ (1:ℕ) * a ^ (1:ℕ)) + ((1:ℕ) : ℝ) * b ^ (2:ℕ) + ((1:ℕ) : ℝ) * c ^ (2:ℕ) + ((1:ℕ) : ℝ) * a ^ (2:ℕ) + ((-1:ℤ) : ℝ) * (c ^ (1:ℕ) * b ^ (1:ℕ)) := by term_derivation_mul_one
     have d269 : (((0:ℕ) : ℝ) + ((-1:ℤ) : ℝ) * (b ^ (1:ℕ) * a ^ (1:ℕ)) + ((-1:ℤ) : ℝ) * (c ^ (1:ℕ) * a ^ (1:ℕ)) + ((1:ℕ) : ℝ) * b ^ (2:ℕ) + ((1:ℕ) : ℝ) * c ^ (2:ℕ) + ((1:ℕ) : ℝ) * a ^ (2:ℕ) + ((-1:ℤ) : ℝ) * (c ^ (1:ℕ) * b ^ (1:ℕ))) / ((1:ℕ) : ℝ) = ((0:ℕ) : ℝ) + ((-1:ℤ) : ℝ) * (b ^ (1:ℕ) * a ^ (1:ℕ)) + ((-1:ℤ) : ℝ) * (c ^ (1:ℕ) * a ^ (1:ℕ)) + ((1:ℕ) : ℝ) * b ^ (2:ℕ) + ((1:ℕ) : ℝ) * c ^ (2:ℕ) + ((1:ℕ) : ℝ) * a ^ (2:ℕ) + ((-1:ℤ) : ℝ) * (c ^ (1:ℕ) * b ^ (1:ℕ)) := by term_derivation_div_literal
-    have d270 : (a ^ (2:ℕ) + b ^ (2:ℕ) + c ^ (2:ℕ) - a * b - b * c - c * a - ((0:ℕ) : ℝ)) / ((1:ℕ) : ℝ) = ((0:ℕ) : ℝ) + ((-1:ℤ) : ℝ) * (b ^ (1:ℕ) * a ^ (1:ℕ)) + ((-1:ℤ) : ℝ) * (c ^ (1:ℕ) * a ^ (1:ℕ)) + ((1:ℕ) : ℝ) * b ^ (2:ℕ) + ((1:ℕ) : ℝ) * c ^ (2:ℕ) + ((1:ℕ) : ℝ) * a ^ (2:ℕ) + ((-1:ℤ) : ℝ) * (c ^ (1:ℕ) * b ^ (1:ℕ)) := by term_derivation_div_eq
+    have d270 : (a ^ (2:ℕ) + b ^ (2:ℕ) + c ^ (2:ℕ) - a * b - b * c - c * a - ((0:ℕ) : ℝ)) / ((1:ℕ) : ℝ) = ((0:ℕ) : ℝ) + ((-1:ℤ) : ℝ) * (b ^ (1:ℕ) * a ^ (1:ℕ)) + ((-1:ℤ) : ℝ) * (c ^ (1:ℕ) * a ^ (1:ℕ)) + ((1:ℕ) : ℝ) * b ^ (2:ℕ) + ((1:ℕ) : ℝ) * c ^ (2:ℕ) + ((1:ℕ) : ℝ) * a ^ (2:ℕ) + ((-1:ℤ) : ℝ) * (c ^ (1:ℕ) * b ^ (1:ℕ)) := by term_derivation_div_eq d266 d267 comm_field_div_identity_coercion comm_field_div_nat_to_real_coercion d269
     have d271 : (-((0:ℕ) : ℤ) : ℤ) = (0:ℕ) := by term_derivation_neg_literal
     have d272 : ((0:ℕ) : ℝ) + ((-1:ℤ) : ℝ) * (b ^ (1:ℕ) * a ^ (1:ℕ)) + ((-1:ℤ) : ℝ) * (c ^ (1:ℕ) * a ^ (1:ℕ)) + ((1:ℕ) : ℝ) * b ^ (2:ℕ) + ((1:ℕ) : ℝ) * c ^ (2:ℕ) + ((1:ℕ) : ℝ) * a ^ (2:ℕ) + ((-1:ℤ) : ℝ) * (c ^ (1:ℕ) * b ^ (1:ℕ)) + ((0:ℕ) : ℝ) = ((0:ℕ) : ℝ) + ((-1:ℤ) : ℝ) * (b ^ (1:ℕ) * a ^ (1:ℕ)) + ((-1:ℤ) : ℝ) * (c ^ (1:ℕ) * a ^ (1:ℕ)) + ((1:ℕ) : ℝ) * b ^ (2:ℕ) + ((1:ℕ) : ℝ) * c ^ (2:ℕ) + ((1:ℕ) : ℝ) * a ^ (2:ℕ) + ((-1:ℤ) : ℝ) * (c ^ (1:ℕ) * b ^ (1:ℕ)) := by term_derivation_nf_add_zero
     have d273 : (a ^ (2:ℕ) + b ^ (2:ℕ) + c ^ (2:ℕ) - a * b - b * c - c * a - ((0:ℕ) : ℝ)) / ((1:ℕ) : ℝ) + ((-((0:ℕ) : ℤ) : ℤ) : ℝ) = ((0:ℕ) : ℝ) + ((-1:ℤ) : ℝ) * (b ^ (1:ℕ) * a ^ (1:ℕ)) + ((-1:ℤ) : ℝ) * (c ^ (1:ℕ) * a ^ (1:ℕ)) + ((1:ℕ) : ℝ) * b ^ (2:ℕ) + ((1:ℕ) : ℝ) * c ^ (2:ℕ) + ((1:ℕ) : ℝ) * a ^ (2:ℕ) + ((-1:ℤ) : ℝ) * (c ^ (1:ℕ) * b ^ (1:ℕ)) := by term_derivation_add_eq d270 d271 eq_identity_coercion eq_int_to_real_coercion d272
@@ -1342,7 +1342,7 @@ def h (a b : ℝ) : (a ^ (2:ℕ) + b ^ (2:ℕ)) / ((2:ℕ) : ℝ) ≥ ((a + b) /
     have d28 : ((1:ℚ)/2 : ℝ) * b ^ (2:ℕ) + ((1:ℚ)/2 : ℝ) * a ^ (2:ℕ) = ((0:ℕ) : ℝ) + ((1:ℚ)/2 : ℝ) * b ^ (2:ℕ) + ((1:ℚ)/2 : ℝ) * a ^ (2:ℕ) := by term_derivation_product_add_product_less
     have d29 : (((0:ℕ) : ℝ) + ((1:ℕ) : ℝ) * b ^ (2:ℕ) + ((1:ℕ) : ℝ) * a ^ (2:ℕ)) * ((1:ℚ)/2 : ℝ) = ((0:ℕ) : ℝ) + ((1:ℚ)/2 : ℝ) * b ^ (2:ℕ) + ((1:ℚ)/2 : ℝ) * a ^ (2:ℕ) := by term_derivation_literal_mul_sum
     have d30 : (((0:ℕ) : ℝ) + ((1:ℕ) : ℝ) * b ^ (2:ℕ) + ((1:ℕ) : ℝ) * a ^ (2:ℕ)) / ((2:ℕ) : ℝ) = ((0:ℕ) : ℝ) + ((1:ℚ)/2 : ℝ) * b ^ (2:ℕ) + ((1:ℚ)/2 : ℝ) * a ^ (2:ℕ) := by term_derivation_div_literal
-    have d31 : (a ^ (2:ℕ) + b ^ (2:ℕ)) / ((2:ℕ) : ℝ) = ((0:ℕ) : ℝ) + ((1:ℚ)/2 : ℝ) * b ^ (2:ℕ) + ((1:ℚ)/2 : ℝ) * a ^ (2:ℕ) := by term_derivation_div_eq
+    have d31 : (a ^ (2:ℕ) + b ^ (2:ℕ)) / ((2:ℕ) : ℝ) = ((0:ℕ) : ℝ) + ((1:ℚ)/2 : ℝ) * b ^ (2:ℕ) + ((1:ℚ)/2 : ℝ) * a ^ (2:ℕ) := by term_derivation_div_eq d7 d8 comm_field_div_identity_coercion comm_field_div_nat_to_real_coercion d30
     have d32 : a = a := by term_derivation_reflection
     have d33 : b = b := by term_derivation_reflection
     have d34 : a + ((1:ℕ) : ℝ) * b ^ (1:ℕ) = ((0:ℕ) : ℝ) + ((1:ℕ) : ℝ) * b ^ (1:ℕ) + ((1:ℕ) : ℝ) * a ^ (1:ℕ) := by term_derivation_atom_add_product
@@ -1368,7 +1368,7 @@ def h (a b : ℝ) : (a ^ (2:ℕ) + b ^ (2:ℕ)) / ((2:ℕ) : ℝ) ≥ ((a + b) /
     have d54 : ((1:ℚ)/2 : ℝ) * b ^ (1:ℕ) + ((1:ℚ)/2 : ℝ) * a ^ (1:ℕ) = ((0:ℕ) : ℝ) + ((1:ℚ)/2 : ℝ) * b ^ (1:ℕ) + ((1:ℚ)/2 : ℝ) * a ^ (1:ℕ) := by term_derivation_product_add_product_less
     have d55 : (((0:ℕ) : ℝ) + ((1:ℕ) : ℝ) * b ^ (1:ℕ) + ((1:ℕ) : ℝ) * a ^ (1:ℕ)) * ((1:ℚ)/2 : ℝ) = ((0:ℕ) : ℝ) + ((1:ℚ)/2 : ℝ) * b ^ (1:ℕ) + ((1:ℚ)/2 : ℝ) * a ^ (1:ℕ) := by term_derivation_literal_mul_sum
     have d56 : (((0:ℕ) : ℝ) + ((1:ℕ) : ℝ) * b ^ (1:ℕ) + ((1:ℕ) : ℝ) * a ^ (1:ℕ)) / ((2:ℕ) : ℝ) = ((0:ℕ) : ℝ) + ((1:ℚ)/2 : ℝ) * b ^ (1:ℕ) + ((1:ℚ)/2 : ℝ) * a ^ (1:ℕ) := by term_derivation_div_literal
-    have d57 : (a + b) / ((2:ℕ) : ℝ) = ((0:ℕ) : ℝ) + ((1:ℚ)/2 : ℝ) * b ^ (1:ℕ) + ((1:ℚ)/2 : ℝ) * a ^ (1:ℕ) := by term_derivation_div_eq
+    have d57 : (a + b) / ((2:ℕ) : ℝ) = ((0:ℕ) : ℝ) + ((1:ℚ)/2 : ℝ) * b ^ (1:ℕ) + ((1:ℚ)/2 : ℝ) * a ^ (1:ℕ) := by term_derivation_div_eq d36 d37 comm_field_div_identity_coercion comm_field_div_nat_to_real_coercion d56
     have d58 : (2:ℕ) = (2:ℕ) := by term_derivation_reflection
     have d59 : ((a + b) / ((2:ℕ) : ℝ)) ^ (2:ℕ) = ((1:ℕ) : ℝ) * (((0:ℕ) : ℝ) + ((1:ℚ)/2 : ℝ) * b ^ (1:ℕ) + ((1:ℚ)/2 : ℝ) * a ^ (1:ℕ)) ^ (2:ℕ) := by term_derivation_non_reduced_power
     have d60 : (-(((1:ℕ) : ℝ) * (((0:ℕ) : ℝ) + ((1:ℚ)/2 : ℝ) * b ^ (1:ℕ) + ((1:ℚ)/2 : ℝ) * a ^ (1:ℕ)) ^ (2:ℕ)) : ℝ) = ((-1:ℤ) : ℝ) * (((0:ℕ) : ℝ) + ((1:ℚ)/2 : ℝ) * b ^ (1:ℕ) + ((1:ℚ)/2 : ℝ) * a ^ (1:ℕ)) ^ (2:ℕ) := by term_derivation_neg_product
@@ -1456,7 +1456,7 @@ def h (a b : ℝ) : (a ^ (2:ℕ) + b ^ (2:ℕ)) / ((2:ℕ) : ℝ) ≥ ((a + b) /
     have d142 : ((1:ℚ)/2 : ℝ) * b ^ (2:ℕ) + ((1:ℚ)/2 : ℝ) * a ^ (2:ℕ) = ((0:ℕ) : ℝ) + ((1:ℚ)/2 : ℝ) * b ^ (2:ℕ) + ((1:ℚ)/2 : ℝ) * a ^ (2:ℕ) := by term_derivation_product_add_product_less
     have d143 : (((0:ℕ) : ℝ) + ((1:ℕ) : ℝ) * b ^ (2:ℕ) + ((1:ℕ) : ℝ) * a ^ (2:ℕ)) * ((1:ℚ)/2 : ℝ) = ((0:ℕ) : ℝ) + ((1:ℚ)/2 : ℝ) * b ^ (2:ℕ) + ((1:ℚ)/2 : ℝ) * a ^ (2:ℕ) := by term_derivation_literal_mul_sum
     have d144 : (((0:ℕ) : ℝ) + ((1:ℕ) : ℝ) * b ^ (2:ℕ) + ((1:ℕ) : ℝ) * a ^ (2:ℕ)) / ((2:ℕ) : ℝ) = ((0:ℕ) : ℝ) + ((1:ℚ)/2 : ℝ) * b ^ (2:ℕ) + ((1:ℚ)/2 : ℝ) * a ^ (2:ℕ) := by term_derivation_div_literal
-    have d145 : (a ^ (2:ℕ) + b ^ (2:ℕ)) / ((2:ℕ) : ℝ) = ((0:ℕ) : ℝ) + ((1:ℚ)/2 : ℝ) * b ^ (2:ℕ) + ((1:ℚ)/2 : ℝ) * a ^ (2:ℕ) := by term_derivation_div_eq
+    have d145 : (a ^ (2:ℕ) + b ^ (2:ℕ)) / ((2:ℕ) : ℝ) = ((0:ℕ) : ℝ) + ((1:ℚ)/2 : ℝ) * b ^ (2:ℕ) + ((1:ℚ)/2 : ℝ) * a ^ (2:ℕ) := by term_derivation_div_eq d121 d122 comm_field_div_identity_coercion comm_field_div_nat_to_real_coercion d144
     have d146 : a = a := by term_derivation_reflection
     have d147 : b = b := by term_derivation_reflection
     have d148 : a + ((1:ℕ) : ℝ) * b ^ (1:ℕ) = ((0:ℕ) : ℝ) + ((1:ℕ) : ℝ) * b ^ (1:ℕ) + ((1:ℕ) : ℝ) * a ^ (1:ℕ) := by term_derivation_atom_add_product
@@ -1482,7 +1482,7 @@ def h (a b : ℝ) : (a ^ (2:ℕ) + b ^ (2:ℕ)) / ((2:ℕ) : ℝ) ≥ ((a + b) /
     have d168 : ((1:ℚ)/2 : ℝ) * b ^ (1:ℕ) + ((1:ℚ)/2 : ℝ) * a ^ (1:ℕ) = ((0:ℕ) : ℝ) + ((1:ℚ)/2 : ℝ) * b ^ (1:ℕ) + ((1:ℚ)/2 : ℝ) * a ^ (1:ℕ) := by term_derivation_product_add_product_less
     have d169 : (((0:ℕ) : ℝ) + ((1:ℕ) : ℝ) * b ^ (1:ℕ) + ((1:ℕ) : ℝ) * a ^ (1:ℕ)) * ((1:ℚ)/2 : ℝ) = ((0:ℕ) : ℝ) + ((1:ℚ)/2 : ℝ) * b ^ (1:ℕ) + ((1:ℚ)/2 : ℝ) * a ^ (1:ℕ) := by term_derivation_literal_mul_sum
     have d170 : (((0:ℕ) : ℝ) + ((1:ℕ) : ℝ) * b ^ (1:ℕ) + ((1:ℕ) : ℝ) * a ^ (1:ℕ)) / ((2:ℕ) : ℝ) = ((0:ℕ) : ℝ) + ((1:ℚ)/2 : ℝ) * b ^ (1:ℕ) + ((1:ℚ)/2 : ℝ) * a ^ (1:ℕ) := by term_derivation_div_literal
-    have d171 : (a + b) / ((2:ℕ) : ℝ) = ((0:ℕ) : ℝ) + ((1:ℚ)/2 : ℝ) * b ^ (1:ℕ) + ((1:ℚ)/2 : ℝ) * a ^ (1:ℕ) := by term_derivation_div_eq
+    have d171 : (a + b) / ((2:ℕ) : ℝ) = ((0:ℕ) : ℝ) + ((1:ℚ)/2 : ℝ) * b ^ (1:ℕ) + ((1:ℚ)/2 : ℝ) * a ^ (1:ℕ) := by term_derivation_div_eq d150 d151 comm_field_div_identity_coercion comm_field_div_nat_to_real_coercion d170
     have d172 : (2:ℕ) = (2:ℕ) := by term_derivation_reflection
     have d173 : ((a + b) / ((2:ℕ) : ℝ)) ^ (2:ℕ) = ((1:ℕ) : ℝ) * (((0:ℕ) : ℝ) + ((1:ℚ)/2 : ℝ) * b ^ (1:ℕ) + ((1:ℚ)/2 : ℝ) * a ^ (1:ℕ)) ^ (2:ℕ) := by term_derivation_non_reduced_power
     have d174 : (1:ℚ)/2 = (1:ℚ)/2 := by term_derivation_reflection
