--- a/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch1.tex
+++ b/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch1.tex
@@ -521,9 +521,9 @@ def h (x : ℝ) (h1 : x > ((0:ℕ) : ℝ)) : x + (((1:ℕ) : ℝ) / x : ℝ) ≥
     have d13 : (1:ℕ) = (1:ℕ) := by term_derivation_reflection
     have d14 : (0:ℕ) + (1:ℕ) = (1:ℕ) := by term_derivation_zero_add
     have d15 : ((1:ℕ) : ℝ) + ((-2:ℤ) : ℝ) * (x ^ (1:ℕ) : ℝ) = ((1:ℕ) : ℝ) + ((-2:ℤ) : ℝ) * (x ^ (1:ℕ) : ℝ) := by term_derivation_reflection
-    have d16 : ((0:ℕ) : ℝ) + ((-2:ℤ) : ℝ) * (x ^ (1:ℕ) : ℝ) + ((1:ℕ) : ℝ) = ((1:ℕ) : ℝ) + ((-2:ℤ) : ℝ) * (x ^ (1:ℕ) : ℝ) := by term_derivation_sum_add_literal
+    have d16 : ((0:ℕ) : ℝ) + ((-2:ℤ) : ℝ) * (x ^ (1:ℕ) : ℝ) + ((1:ℕ) : ℝ) = ((1:ℕ) : ℝ) + ((-2:ℤ) : ℝ) * (x ^ (1:ℕ) : ℝ) := by term_derivation_sum_add_literal d14 d15 comm_ring_add_identity_coercion nat_real_real_coercion_triangle real_real_real_coercion_triangle eq_nat_to_real_coercion comm_ring_add_nat_to_real_coercion nat_nat_real_coercion_triangle nat_nat_real_coercion_triangle
     have d17 : ((1:ℕ) : ℝ) + ((-2:ℤ) : ℝ) * (x ^ (1:ℕ) : ℝ) + ((1:ℕ) : ℝ) * (x ^ (2:ℕ) : ℝ) = ((1:ℕ) : ℝ) + ((-2:ℤ) : ℝ) * (x ^ (1:ℕ) : ℝ) + ((1:ℕ) : ℝ) * (x ^ (2:ℕ) : ℝ) := by term_derivation_reflection
-    have d18 : ((0:ℕ) : ℝ) + ((-2:ℤ) : ℝ) * (x ^ (1:ℕ) : ℝ) + ((1:ℕ) : ℝ) * (x ^ (2:ℕ) : ℝ) + ((1:ℕ) : ℝ) = ((1:ℕ) : ℝ) + ((-2:ℤ) : ℝ) * (x ^ (1:ℕ) : ℝ) + ((1:ℕ) : ℝ) * (x ^ (2:ℕ) : ℝ) := by term_derivation_sum_add_literal
+    have d18 : ((0:ℕ) : ℝ) + ((-2:ℤ) : ℝ) * (x ^ (1:ℕ) : ℝ) + ((1:ℕ) : ℝ) * (x ^ (2:ℕ) : ℝ) + ((1:ℕ) : ℝ) = ((1:ℕ) : ℝ) + ((-2:ℤ) : ℝ) * (x ^ (1:ℕ) : ℝ) + ((1:ℕ) : ℝ) * (x ^ (2:ℕ) : ℝ) := by term_derivation_sum_add_literal d16 d17 comm_ring_add_identity_coercion real_real_real_coercion_triangle real_real_real_coercion_triangle eq_identity_coercion comm_ring_add_identity_coercion real_real_real_coercion_triangle nat_real_real_coercion_triangle
     have d19 : ((x ^ (2:ℕ) : ℝ) - ((2:ℕ) : ℝ) * x : ℝ) + ((1:ℕ) : ℝ) = ((1:ℕ) : ℝ) + ((-2:ℤ) : ℝ) * (x ^ (1:ℕ) : ℝ) + ((1:ℕ) : ℝ) * (x ^ (2:ℕ) : ℝ) := by term_derivation_add_eq d11 d12 eq_identity_coercion eq_nat_to_real_coercion d18
     have d20 : (0:ℕ) = (0:ℕ) := by term_derivation_reflection
     have d21 : (1:ℕ) = (1:ℕ) := by term_derivation_reflection
@@ -1198,9 +1198,9 @@ def h (a b : ℝ) (h1 : a > ((0:ℕ) : ℝ)) (h2 : b > ((0:ℕ) : ℝ)) : (a / b
     have d80 : (-2:ℤ) = (-2:ℤ) := by term_derivation_reflection
     have d81 : ((0:ℕ) : ℤ) + (-2:ℤ) = (-2:ℤ) := by term_derivation_zero_add
     have d82 : ((-2:ℤ) : ℝ) + ((1:ℕ) : ℝ) * ((b ^ (-1:ℤ) : ℝ) * (a ^ (1:ℕ) : ℝ)) = ((-2:ℤ) : ℝ) + ((1:ℕ) : ℝ) * ((b ^ (-1:ℤ) : ℝ) * (a ^ (1:ℕ) : ℝ)) := by term_derivation_reflection
-    have d83 : ((0:ℕ) : ℝ) + ((1:ℕ) : ℝ) * ((b ^ (-1:ℤ) : ℝ) * (a ^ (1:ℕ) : ℝ)) + ((-2:ℤ) : ℝ) = ((-2:ℤ) : ℝ) + ((1:ℕ) : ℝ) * ((b ^ (-1:ℤ) : ℝ) * (a ^ (1:ℕ) : ℝ)) := by term_derivation_sum_add_literal
+    have d83 : ((0:ℕ) : ℝ) + ((1:ℕ) : ℝ) * ((b ^ (-1:ℤ) : ℝ) * (a ^ (1:ℕ) : ℝ)) + ((-2:ℤ) : ℝ) = ((-2:ℤ) : ℝ) + ((1:ℕ) : ℝ) * ((b ^ (-1:ℤ) : ℝ) * (a ^ (1:ℕ) : ℝ)) := by term_derivation_sum_add_literal d81 d82 comm_ring_add_identity_coercion nat_real_real_coercion_triangle real_real_real_coercion_triangle eq_int_to_real_coercion comm_ring_add_int_to_real_coercion nat_int_real_coercion_triangle int_int_real_coercion_triangle
     have d84 : ((-2:ℤ) : ℝ) + ((1:ℕ) : ℝ) * ((b ^ (-1:ℤ) : ℝ) * (a ^ (1:ℕ) : ℝ)) + ((1:ℕ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (-1:ℤ) : ℝ)) = ((-2:ℤ) : ℝ) + ((1:ℕ) : ℝ) * ((b ^ (-1:ℤ) : ℝ) * (a ^ (1:ℕ) : ℝ)) + ((1:ℕ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (-1:ℤ) : ℝ)) := by term_derivation_reflection
-    have d85 : ((0:ℕ) : ℝ) + ((1:ℕ) : ℝ) * ((b ^ (-1:ℤ) : ℝ) * (a ^ (1:ℕ) : ℝ)) + ((1:ℕ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (-1:ℤ) : ℝ)) + ((-2:ℤ) : ℝ) = ((-2:ℤ) : ℝ) + ((1:ℕ) : ℝ) * ((b ^ (-1:ℤ) : ℝ) * (a ^ (1:ℕ) : ℝ)) + ((1:ℕ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (-1:ℤ) : ℝ)) := by term_derivation_sum_add_literal
+    have d85 : ((0:ℕ) : ℝ) + ((1:ℕ) : ℝ) * ((b ^ (-1:ℤ) : ℝ) * (a ^ (1:ℕ) : ℝ)) + ((1:ℕ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (-1:ℤ) : ℝ)) + ((-2:ℤ) : ℝ) = ((-2:ℤ) : ℝ) + ((1:ℕ) : ℝ) * ((b ^ (-1:ℤ) : ℝ) * (a ^ (1:ℕ) : ℝ)) + ((1:ℕ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (-1:ℤ) : ℝ)) := by term_derivation_sum_add_literal d83 d84 comm_ring_add_identity_coercion real_real_real_coercion_triangle real_real_real_coercion_triangle eq_identity_coercion comm_ring_add_identity_coercion real_real_real_coercion_triangle int_real_real_coercion_triangle
     have d86 : ((0:ℕ) : ℝ) + ((1:ℕ) : ℝ) * ((b ^ (-1:ℤ) : ℝ) * (a ^ (1:ℕ) : ℝ)) + ((1:ℕ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (-1:ℤ) : ℝ)) + ((-((2:ℕ) : ℤ) : ℤ) : ℝ) = ((-2:ℤ) : ℝ) + ((1:ℕ) : ℝ) * ((b ^ (-1:ℤ) : ℝ) * (a ^ (1:ℕ) : ℝ)) + ((1:ℕ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (-1:ℤ) : ℝ)) := by term_derivation_add_eq d78 d79 eq_identity_coercion eq_int_to_real_coercion d85
     have d87 : (((0:ℕ) : ℝ) + ((1:ℕ) : ℝ) * ((b ^ (-1:ℤ) : ℝ) * (a ^ (1:ℕ) : ℝ)) + ((1:ℕ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (-1:ℤ) : ℝ)) - ((2:ℕ) : ℝ) : ℝ) = ((-2:ℤ) : ℝ) + ((1:ℕ) : ℝ) * ((b ^ (-1:ℤ) : ℝ) * (a ^ (1:ℕ) : ℝ)) + ((1:ℕ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (-1:ℤ) : ℝ)) := by term_derivation_sub_eqs_add_neg d86 neg_nat_to_real_coercion
     have d88 : (a / b : ℝ) + (b / a : ℝ) ≥ ((2:ℕ) : ℝ) ↔ ((-2:ℤ) : ℝ) + ((1:ℕ) : ℝ) * ((b ^ (-1:ℤ) : ℝ) * (a ^ (1:ℕ) : ℝ)) + ((1:ℕ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (-1:ℤ) : ℝ)) ≥ ((0:ℕ) : ℝ) := by term_derivation_num_comparison
